--- a/standard-integration/public/index.html
+++ b/standard-integration/public/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <!-- Replace "test" with your own sandbox Business account app client ID -->
+    <!-- Replace "Aa1SaOOLvmSy1E-Wa4rZ_L1Yz4hhKBXP-_HcGq-1tTIMKLwSJX7eGqHX8q0QowRZ72d0kPTrokAGOEuK" with your own sandbox Business account app client ID -->
     <script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD"></script>
     <!-- Set up a container element for the button -->
     <div id="paypal-button-container"></div>
